# College

./: CMakeLists.txt  README.md  run
debug/: 6_1  6_2  6_3  6_4  6_5  6_6  6_7  6_8  7_1  7_2  7_3  7_4  CMakeCache.txt  Makefile  cmake_install.cmake
include/: CMakeLists.txt  array.h  seed.h
include/matrix/: matrix.c  matrix.h
include/seed/: seed.c  seed.h
l6/: 4.c  5.c  6.c  7.c  8.c
l7/: 1.c  4.c
lib/: CMakeLists.txt  array.c  seed.c
src/l6/: 2.c  3.c
src/l7/: 2.c  3.c
src/term2/l10/: 1.c  2.c  3.c  4.c  README.md
src/term2/l11/: 1.c  README.md
src/term2/l6/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
src/term2/l7/: 1.c  2.c  3.c  4.c
src/term2/l8/: 1.c  2.c  3.c  4.c
src/term2/l9/: 2.c  3.c  4.c  README.md
